--- a/CoreCausus.vcxproj
+++ b/CoreCausus.vcxproj
@@ -19,7 +19,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CoreCausus.cpp" />
+    <ClCompile Include="src\CoreCausis.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
