--- a/CoreCausus.vcxproj.filters
+++ b/CoreCausus.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="CoreCausus.cpp">
+    <ClCompile Include="src\CoreCausis.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
